<resources>
    <string name="app_name">Adventura</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_mail">E-mail</string>
    <string name="lbl_username">Kullanıcı Adı</string>
    <string name="lbl_password">Şifre</string>
    <string name="lbl_confirm_password">Şifrenizi tekrar giriniz</string>
    <string name="lbl_forgot_password">Şifremi Unuttum</string>
    <string name="lbl_remember_me">Beni Hatırla!</string>
    <string name="lbl_login">Giriş</string>
    <string name="lbl_or">Ya da</string>
    <string name="lbl_register">Kayıt Ol!</string>
    <string name="lbl_do_log">Giriş Yap</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favoriler</string>
    <string name="title_profile">Profil</string>
    <string name="lbl_reservationType">Rezervasyon Seçin</string>
    <string name="lbl_hotel">Otel</string>
    <string name="lbl_tour">Tur</string>
    <string name="lbl_flight">Uçuş</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_checkin">Giriş Tarihi</string>
    <string name="lbl_checkout">Çıkış Tarihi</string>
    <string name="lbl_where">Nereye Gidiyorsun?</string>
    <string name="lbl_personNum">Kişi Sayısı</string>
    <string name="lbl_roomNum">Oda Sayısı</string>
    <string name="lbl_searchHotel">Otel Ara</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="location">Location</string>
    <string name="currency_type">$$$</string>
    <string name="prize">$$$</string>
    <string name="todo">TODO</string>
    <string name="from_where">Nereden</string>
    <string name="select_city">Şehir Seçiniz</string>
    <string name="to_where">Nereye</string>
    <string name="traveller">Yolcu Sayısı</string>
    <string name="_1">1</string>
    <string name="search_flight">Uçuş Ara</string>
    <string name="business">Business</string>
    <string name="economy">Ekonomi</string>
    <string name="airline_name">Airline Name</string>
    <string name="gidis_date">Gidiş Tarihi</string>
    <string name="adult">Yetişkin</string>
    <string name="child">Çocuk</string>
    <string name="baby">Bebek</string>
    <string name="child_age">(2-11 Yaş)</string>
    <string name="baby_age">(0-2 Yaş)</string>
    <string name="populer_flights">Popüler Uçuşlar</string>
    <string name="featured_flights">Öne Çıkan Uçuşlar</string>
    <string name="welcome_back">Hoşgeldiniz!</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="discover">Yeni Yerler Keşfet! Biletini al ve Yolculuğa başla!</string>
    <string name="popular_tours">Popüler Turlar</string>
    <string name="see_all">Tümünü Gör</string>
    <string name="popular_hotels">Popüler Oteller</string>
    <string name="featured_hotels">Öne Çıkan Oteller</string>
    <string name="featured_tours">Öne Çıkan Turlar</string>
    <string name="search_tour">Tur Ara</string>
    <string name="traveller_num">Yolcu Sayısı</string>
    <string name="popular_flights">Popüler Uçuşlar</string>
    <string name="tour_type">TourType</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="log_in_as_a_member">ÜYE GİRİŞİ YAPIN</string>
    <string name="choose_hotel_find_room">Beğendiğin oteli seç istediğin odayı rezerve et ve tatile Başla!</string>
    <string name="description">description</string>
    <string name="find_place_to_abroad">Gezmek istediğin yeri seç! Biletini al yolculuğa başla!</string>
    <string name="select_airport">Havaalanı Seçiniz</string>
    <string name="clock_1">kaçtan</string>
    <string name="clock_2">kaça</string>
    <string name="curreny_type_lira">₺</string>
    <string name="before_day">Önceki gün</string>
    <string name="next_day">Sonraki gün</string>
    <string name="price">price</string>
    <string name="filter">Filtrele</string>
    <string name="sort">Sırala</string>
    <string name="tour_name">Tour Name</string>
    <string name="my_account">Hesabım</string>
    <string name="departure">Kalkış</string>
    <string name="arrival">Varış</string>
    <string name="total_flight_time">Toplam Uçuş Süresi:</string>
    <string name="total_price">Toplam Tutar</string>
    <string name="flight_infos">Uçuş Bilgileri</string>
    <string name="age">Yaş</string>
    <string name="select_chair_no">Koltuk numarası seçiniz</string>
    <string name="roomtype">room Type</string>
    <string name="for_kids">Çocuk için;</string>
    <string name="my_tickets">Biletlerim</string>
    <string name="hotel">Otel</string>
    <string name="chair_no">Koltuk Numarası:</string>
    <string name="room_num">Oda Numarası</string>
    <string name="total_ticket_num">Toplam Bilet Sayısı:</string>
    <string name="no">NO</string>
    <string name="my_reservations">Rezervasyonlarım</string>
    <string name="my_tour_tickets">Tur Biletlerim</string>
    <string name="return_app">Uygulamaya Dön</string>
    <string name="return_homepage">Anasayfaya Dön</string>
</resources>