<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_marginTop="102dp"
        android:src="@drawable/circle_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/mailTxt"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/lbl_mail"
        android:inputType="text"
        android:padding="18dp"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/PasswTxt"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/lbl_password"
        android:inputType="textPassword"
        android:padding="18dp"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailTxt" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:backgroundTint="@color/white"
        android:padding="18dp"
        android:text="@string/lbl_login"
        android:textColor="#3B84F1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/lbl_or"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <View
        android:layout_width="75dp"
        android:layout_height="1dp"
        android:layout_below="@id/regBtn"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/regBtn"
        app:layout_constraintStart_toStartOf="@+id/regBtn"
        app:layout_constraintTop_toBottomOf="@+id/regBtn" />

    <TextView
        android:id="@+id/regBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/lbl_register"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="41dp"
        android:text="@string/lbl_forgot_password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/PasswTxt" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="13dp"
        android:text="@string/lbl_remember_me"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswTxt" />

    <ImageView
        android:id="@+id/passwordLock"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/eye_crossed"
        app:layout_constraintBottom_toBottomOf="@+id/PasswTxt"
        app:layout_constraintEnd_toEndOf="@+id/PasswTxt"
        app:layout_constraintTop_toTopOf="@+id/PasswTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>