<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogbg">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_remove_24"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/createText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:padding="8dp"
            android:text="@string/lbl_reservationType"
            android:textAlignment="viewStart"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_clear_24"
            android:layout_marginStart="50dp"
            android:layout_marginTop="18dp"
            android:id="@+id/cancelButton"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFlight"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/airplane" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/lbl_flight"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutHotel"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/hotelbell" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/lbl_hotel"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutTour"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="30dp">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/luggage"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/lbl_tour"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>