<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="290dp"
    android:layout_margin="5dp"
    android:background="@drawable/rounded_corner_with_white_bcg"
    android:backgroundTint="@color/page_background"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp">

    <View
        android:id="@+id/view"
        android:layout_width="5dp"
        android:layout_height="270dp"
        android:layout_marginStart="1dp"
        android:background="@drawable/left_tab_bottom_24dp_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/hotelNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="24dp"
        android:text="@string/hotel_name"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/roomTypeTxt"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/roomPhoto"
            android:layout_width="100dp"
            android:layout_height="80dp"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="192dp"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/checkInTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/clock_1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView22"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="@+id/textView22" />

    <TextView
        android:id="@+id/roomTypeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:text="@string/roomtype"
        app:layout_constraintEnd_toEndOf="@+id/hotelNameTxt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/hotelNameTxt"
        app:layout_constraintTop_toBottomOf="@+id/hotelNameTxt" />

    <TextView
        android:id="@+id/totalPriceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="0000.00"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/currencyTxt2"
        app:layout_constraintEnd_toStartOf="@+id/currencyTxt2"
        app:layout_constraintTop_toTopOf="@+id/currencyTxt2" />

    <TextView
        android:id="@+id/currencyTxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="$"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="000"
        app:layout_constraintBottom_toBottomOf="@+id/roomTypeTxt"
        app:layout_constraintStart_toEndOf="@+id/roomTypeTxt"
        app:layout_constraintTop_toTopOf="@+id/roomTypeTxt" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/filled_blue_dot"
        app:layout_constraintEnd_toEndOf="@+id/usernameTxt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usernameTxt"
        app:layout_constraintTop_toBottomOf="@+id/usernameTxt" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/empty_blue_dot"
        app:layout_constraintEnd_toEndOf="@+id/imageView20"
        app:layout_constraintStart_toStartOf="@+id/imageView20"
        app:layout_constraintTop_toBottomOf="@+id/imageView20" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_checkout"
        app:layout_constraintBottom_toBottomOf="@+id/imageView21"
        app:layout_constraintStart_toEndOf="@+id/imageView21"
        app:layout_constraintTop_toTopOf="@+id/imageView21" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_checkin"
        app:layout_constraintBottom_toBottomOf="@+id/imageView20"
        app:layout_constraintStart_toEndOf="@+id/imageView20"
        app:layout_constraintTop_toTopOf="@+id/imageView20" />

    <TextView
        android:id="@+id/locationNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/location"
        app:layout_constraintBottom_toBottomOf="@+id/hotelNameTxt"
        app:layout_constraintStart_toEndOf="@+id/hotelNameTxt"
        app:layout_constraintTop_toTopOf="@+id/hotelNameTxt"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/checkOutTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/clock_2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView29"
        app:layout_constraintStart_toEndOf="@+id/textView29"
        app:layout_constraintTop_toTopOf="@+id/textView29"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/usernameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/username"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView20"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="14dp"
        android:text="@string/room_num"
        app:layout_constraintBottom_toTopOf="@+id/roomPhoto"
        app:layout_constraintStart_toStartOf="@+id/imageView21"
        app:layout_constraintTop_toBottomOf="@+id/imageView21" />

    <TextView
        android:id="@+id/roomNumTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="NO"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:scaleX="0.3"
        android:scaleY="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currencyTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$"
        app:layout_constraintBottom_toBottomOf="@+id/priceTxt"
        app:layout_constraintStart_toEndOf="@+id/priceTxt"
        app:layout_constraintTop_toTopOf="@+id/priceTxt" />
</androidx.constraintlayout.widget.ConstraintLayout>