<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="5dp"
    android:padding="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/airlineNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="297dp"
                android:text="@string/airline_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/priceTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="325dp"
                android:layout_marginBottom="16dp"
                android:text="@string/prize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/currencyTxt" />

            <TextView
                android:id="@+id/currencyTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="16dp"
                android:text="@string/currency_type"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/priceTxt"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/fromWhereTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="7dp"
                android:text="@string/from_where"
                app:layout_constraintEnd_toStartOf="@+id/imageView11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/airlineNameTxt" />

            <TextView
                android:id="@+id/toWhereTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="233dp"
                android:text="@string/to_where"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toBottomOf="@+id/airlineNameTxt" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="30dp"
                android:layout_height="15dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="7dp"
                app:layout_constraintEnd_toStartOf="@+id/toWhereTxt"
                app:layout_constraintStart_toEndOf="@+id/fromWhereTxt"
                app:layout_constraintTop_toBottomOf="@+id/airlineNameTxt"
                app:srcCompat="@drawable/right_arrow" />

            <ImageView
                android:id="@+id/airlinePhoto"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="74dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>